07-web-mysql-kompose-example/orig-kompose-generated/todo-web-application-network-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: todo-web-application-network
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/todo-web-application-network: "true"
  podSelector:
    matchLabels:
      io.kompose.network/todo-web-application-network: "true"
